kubernetes/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 5000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /calendar
        pathType: Prefix
        backend:
          service:
            name: calendar-service
            port:
              number: 5104
      - path: /communication
        pathType: Prefix
        backend:
          service:
            name: communication-service
            port:
              number: 5103
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
